Add rename syscall and execve syscall
enable rename for loongarch in configure.host

--- a/libgloss/loongarch/Makefile.in
+++ b/libgloss/loongarch/Makefile.in
@@ -36,9 +36,10 @@ gloss_srcs = \
 	sys_sysconf.c \
 	sys_times.c \
 	sys_unlink.c \
-	sys_utime.c \
 	sys_wait.c \
 	sys_write.c \
+	sys_rename.c \
+	sys_utime.c \
 	errno.c \
 	elf_init.c \
 
